add new elements for v0.1
